tests/integration/snapshots/integration__conformance__y_object_with_newlines.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: []
status: 0
success: true
stdin ---
{
"a": "b"
}
stdout ---
{
    "a": "b"
}

stderr ---
