tests/integration/snapshots/integration__conformance__y_string_1_2_3_bytes_utf-8_sequences.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
["\u0060\u012a\u12AB"]
stdout ---
["\u0060\u012a\u12AB"]

stderr ---
