tests/integration/snapshots/integration__conformance__y_string_accepted_surrogate_pair.json.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
["\uD801\udc37"]
stdout ---
[
    "\uD801\udc37"
]

stderr ---
