tests/integration/snapshots/integration__conformance__y_string_accepted_surrogate_pairs.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
["\ud83d\ude39\ud83d\udc8d"]
stdout ---
["\ud83d\ude39\ud83d\udc8d"]

stderr ---
