tests/integration/snapshots/integration__conformance__y_string_accepted_surrogate_pairs.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
command: "jjp"
status: 0
success: true
stdout ---
["\ud83d\ude39\ud83d\udc8d"]
stderr ---
