tests/integration/snapshots/integration__conformance__y_string_allowed_escapes.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
["\"\\\/\b\f\n\r\t"]
stdout ---
["\"\\\/\b\f\n\r\t"]

stderr ---
