tests/integration/snapshots/integration__conformance__y_string_allowed_escapes.json.snap
---
source: tests/integration/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
["\"\\\/\b\f\n\r\t"]
stdout --- 
["\"\\\/\b\f\n\r\t"]
stderr --- 
<empty>
