tests/integration/snapshots/integration__conformance__y_string_backslash_and_u_escaped_zero.json.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
["\\u0000"]
stdout ---
[
  "\\u0000"
]

stderr ---
